--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-rating": "^2.0.5",
     "react-router-dom": "^6.13.0",
     "react-tabs": "^6.0.1",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "swiper": "^9.4.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
