--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.45.1",
     "react-icons": "^4.9.0",
     "react-rating": "^2.0.5",
     "react-router-dom": "^6.13.0",
