--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "aos": "^3.0.0-beta.6",
+    "firebase": "^10.0.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
@@ -21,6 +22,7 @@
     "react-router-dom": "^6.13.0",
     "react-tabs": "^6.0.1",
     "sort-by": "^1.2.0",
+    "sweetalert2": "^11.7.12",
     "swiper": "^9.4.1"
   },
   "devDependencies": {
