--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "aos": "^3.0.0-beta.6",
+    "file-saver": "^2.0.5",
     "firebase": "^10.0.0",
+    "html2pdf.js": "^0.10.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
