--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-rating": "^2.0.5",
     "react-router-dom": "^6.13.0",
     "react-tabs": "^6.0.1",
+    "react-toastify": "^9.1.3",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.7.12",
     "swiper": "^9.4.1"
