--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "aos": "^3.0.0-beta.6",
     "file-saver": "^2.0.5",
     "firebase": "^10.0.0",
