--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
+    "@tanstack/react-query": "^4.32.6",
     "aos": "^3.0.0-beta.6",
+    "axios": "^1.4.0",
     "file-saver": "^2.0.5",
     "firebase": "^10.0.0",
     "framer-motion": "^10.15.0",
