--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@tanstack/react-query": "^4.32.6",
+    "animate.css": "^4.1.1",
     "aos": "^3.0.0-beta.6",
     "axios": "^1.4.0",
     "file-saver": "^2.0.5",
@@ -24,12 +25,14 @@
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
+    "react-aos": "^1.0.1",
     "react-dom": "^18.2.0",
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.45.1",
     "react-icons": "^4.10.1",
     "react-rating": "^2.0.5",
     "react-router-dom": "^6.13.0",
+    "react-spring": "^9.7.2",
     "react-tabs": "^6.0.1",
     "react-toastify": "^9.1.3",
     "sort-by": "^1.2.0",
