--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "animate.css": "^4.1.1",
     "aos": "^3.0.0-beta.6",
     "axios": "^1.4.0",
+    "emailjs-com": "^3.2.0",
     "file-saver": "^2.0.5",
     "firebase": "^10.0.0",
     "framer-motion": "^10.15.0",
