--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.45.1",
     "react-icons": "^4.10.1",
+    "react-modal": "^3.16.1",
     "react-rating": "^2.0.5",
     "react-router-dom": "^6.13.0",
     "react-spring": "^9.7.2",
