--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@stripe/react-stripe-js": "^2.4.0",
+    "@stripe/stripe-js": "^2.2.0",
     "@tanstack/react-query": "^4.32.6",
     "animate.css": "^4.1.1",
     "aos": "^3.0.0-beta.6",
